Security
* feat(auth): add keycloak

Spring boot 3
Spring Security 6
springdoc-openapi 2

* feat(auth): add Security for SpringDoc and logs at Startup